--- a/res/xml/category_spoofing.xml
+++ b/res/xml/category_spoofing.xml
@@ -21,7 +21,7 @@
 
         <!-- Play integrity fix -->
         <com.android.settings.custom.preference.SystemPropertySwitchPreference
-            android:key="persist.sys.pif"
+            android:key="persist.sys.pihooks.enable"
             android:title="@string/spoofing_pif_toggle_title"
             android:summary="@string/spoofing_pif_toggle_summary"
             android:defaultValue="true" />
@@ -30,7 +30,7 @@
             android:key="spoofing_pif_values"
             android:title="@string/spoofing_pif_values_title"
             android:summary="@string/spoofing_pif_values_summary"
-            android:dependency="persist.sys.pif">
+            android:dependency="persist.sys.pihooks.enable">
             <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="com.goolag.pif"
                 android:targetClass="com.goolag.pif.PifActivity" />
@@ -38,7 +38,7 @@
 
         <!-- Pixel props -->
         <com.android.settings.custom.preference.SystemPropertySwitchPreference
-            android:key="persist.sys.pixelprops"
+            android:key="persist.sys.pphooks.enable"
             android:title="@string/spoofing_pixel_props_title"
             android:summary="@string/spoofing_pixel_props_summary"
             android:defaultValue="true" />
@@ -51,21 +51,21 @@
 
         <!-- Google Photos -->
         <com.android.settings.custom.preference.SystemPropertySwitchPreference
-            android:key="persist.sys.pixelprops.gphotos"
+            android:key="persist.sys.gphooks.enable"
             android:title="@string/spoofing_photos_title"
             android:summary="@string/spoofing_photos_summary"
             android:defaultValue="false" />
 
         <!-- Games fps -->
         <com.android.settings.custom.preference.SystemPropertySwitchPreference
-            android:key="persist.sys.pixelprops.games"
+            android:key="persist.sys.gamehooks.enable"
             android:title="@string/spoofing_games_title"
             android:summary="@string/spoofing_games_summary"
             android:defaultValue="false" />
 
         <!-- Snapchat -->
         <com.android.settings.custom.preference.SystemPropertySwitchPreference
-            android:key="persist.sys.pixelprops.snapchat"
+            android:key="persist.sys.snaphooks.enable"
             android:title="@string/spoofing_snapchat_title"
             android:summary="@string/spoofing_snapchat_summary"
             android:defaultValue="true" />
